--- a/css.css
+++ b/css.css
@@ -1,2 +1,11 @@
-div{
-	border:1px solid black;}
+.box-online{
+	width: 100%;
+	height: 18em;
+	border:1px solid black;
+}
+.box-online-img{
+	width:100%;
+	height: 18em;
+	border-radius:5px;
+
+}
