--- a/css.css
+++ b/css.css
@@ -2,10 +2,5 @@
 	width: 100%;
 	height: 18em;
 	border:1px solid black;
-}
-.box-online-img{
-	width:100%;
-	height: 18em;
-	border-radius:5px;
-
+	background-image: url(logo2.jpg);
 }
