--- a/css.css
+++ b/css.css
@@ -3,4 +3,6 @@
 	height: 18em;
 	border:1px solid black;
 	background-image: url(logo2.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
 }
