--- a/css.css
+++ b/css.css
@@ -1,8 +1,18 @@
 .box-online{
-	width: 100%;
+	
 	height: 18em;
-	border:1px solid black;
-	background-image: url(logo2.jpg);
-	background-size: cover;
+	border:0px solid black;
+	background-image: url('2.jpg');
+	 
+	background-image: cover;	
 	background-repeat: no-repeat;
+
+	-webkit-transition: background-color 2s ease-out;
+  -moz-transition: background-color 2s ease-out;
+  -o-transition: background-color 2s ease-out;
+  transition: background-color 2s ease-out;
+}
+.box-online:hover {
+  background-color: #968;
+  cursor: pointer;
 }
